# trojan_linter

./: .gitignore  gen_confusables.py  linter_module.c  setup.cfg  tox.ini
tests/: test_linemap.py  test_linter.py  test_main.py  test_tokenize.py
tests/cases/: backspaces.yaml  bad-encoding.yaml  bidi.yaml  confusable-digits.yaml  confusable-score.yaml  normalization.yaml  ok.yaml  weird-encoding.yaml
trojan_linter/: confusables.py  linter.py  nits.py  profiles.py  tokenize_python.py
