[metadata]
name = trojan_linter
version = 0.0
description = Linter for reordered text, homoglyphs and control characters
#long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = linter, trojan-source
license = MIT
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
install_requires =
    precis-i18n
    regex

[options.packages.find]
include = trojan_linter

[options.extras_require]
test =
    pytest
    hypothesis
