[metadata]
name = trojan_linter
version = 0.0.2
url: https://github.com/encukou/trojan_linter
description = Linter for reordered text, homoglyphs and control characters
long_description = file: README.md
long_description_content_type = text/markdown
author = Petr Viktorin
author_email = encukou@gmail.com
keywords = linter, trojan-source
license = MIT
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = trojan_linter
install_requires =
    precis-i18n
    regex
    click

[options.extras_require]
test =
    pytest
    hypothesis
    pyyaml
lint =
    pyflakes
